# Computa-o-Gr-fica

./: .gitignore  CMakeLists.txt  Comp Grafica.sln  Comp Grafica.vcxproj  Comp Grafica.vcxproj.filters  README.md  ambient.cpp  ambient.h  cone.cpp  cone.h  cylinder.cpp  cylinder.h  directional.cpp  directional.h  display.cpp  display.h  displayStructs.h  lightSource.cpp  lightSource.h  main.cpp  makefile  matrix.cpp  matrix.h  mesh.cpp  mesh.h  object.cpp  object.h  output  plane.cpp  plane.h  point.cpp  point.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spot.cpp  spot.h  textureUtils.cpp  textureUtils.h  (+3 more)
src/: .gitignore  README.md  ambient.h  cone.cpp  cone.h  cylinder.h  directional.h  display.h  displayStructs.h  lightSource.h  main.cpp  matrix.cpp  matrix.h  mesh.cpp  mesh.h  object.cpp  object.h  plane.cpp  plane.h  scene.cpp  scene.h  sphere.cpp  sphere.h  spot.h  utils.h
src/Canvas/: canvas.cpp  canvas.h
src/Display/: display.h  displayStructs.h
src/LightSources/Ambient/: ambient.cpp  ambient.h
src/LightSources/Directional/: directional.cpp  directional.h
src/LightSources/LightSource/: lightSource.cpp  lightSource.h
src/LightSources/Point/: point.cpp  point.h
src/LightSources/Spot/: spot.cpp  spot.h
src/Matrix/: matrix.cpp  matrix.h
src/Objects/Cone/: cone.cpp  cone.h
src/Objects/Cylinder/: cylinder.cpp  cylinder.h
src/Objects/Mesh/: mesh.cpp  mesh.h
src/Objects/Object/: object.cpp  object.h
src/Objects/Plane/: plane.cpp  plane.h
src/Objects/Sphere/: sphere.cpp  sphere.h
src/Scene/: scene.cpp  scene.h
src/Utils/: utils.cpp  utils.h  utilsStructs.h
